tests/diagnostics/file_roles/main_entrypoint/in_library/expect.txt
# exit: 1
lib.coppice:1:10: error: main is only allowed in .bin.coppice files
  function main() -> nil {
           ^
